tests/error/ptr_assign_other.gw
#! [contains] can't assign member function to a pointer of an other class
class C {
  funptr void Test();
  var Test test;
}

class D {
  fun void test(){}
}

var C c;
var D d;
<<< d.test @=> c.test >>>;
